# ascii-audio-visualizer

./: Cargo.toml  README.md  config.ini
.github/workflows/: rust.yml  super-linter.yml
src/: animators.rs  audio_formats.rs  audio_process_buffer.rs  audio_processing.rs  colors.rs  config.rs  main.rs  terminal_grid.rs
src/input/: mod.rs  pulse.rs  wasapi.rs
